[gd_scene load_steps=6 format=3 uid="uid://d0wl53hsyfl8g"]

[ext_resource type="Script" uid="uid://dn3fkdp1t71m6" path="res://src/game/ui/menus/pause_menu/pause_menu.gd" id="1"]
[ext_resource type="Theme" uid="uid://btc130konr2b" path="res://assets/themes/my_theme.tres" id="2_mkjft"]
[ext_resource type="FontFile" uid="uid://bv44481q4ecxo" path="res://assets/fonts/Cinzel-VariableFont_wght.ttf" id="3_5a146"]
[ext_resource type="PackedScene" uid="uid://m012tphmbg3w" path="res://src/game/ui/menus/options_menu/options_menu.tscn" id="4_rabgt"]
[ext_resource type="AudioStream" uid="uid://c2j28rs0482to" path="res://assets/sound/soundtracks/hover-button-287656.mp3" id="5_luajn"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mkjft")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.93333334)

[node name="MarginPause" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenu/MarginPause"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="Label" type="Label" parent="PauseMenu/MarginPause/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_5a146")
theme_override_font_sizes/font_size = 64
text = "PAUSA"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginPause/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 44

[node name="ResumeButton" type="Button" parent="PauseMenu/MarginPause/VBoxContainer2/VBoxContainer" groups=["ButtonUI"]]
layout_mode = 2
theme = ExtResource("2_mkjft")
theme_override_fonts/font = ExtResource("3_5a146")
theme_override_font_sizes/font_size = 29
text = "Atras"

[node name="OptionsButton" type="Button" parent="PauseMenu/MarginPause/VBoxContainer2/VBoxContainer" groups=["ButtonUI"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5a146")
theme_override_font_sizes/font_size = 29
text = "Opciones"

[node name="ReturnButton" type="Button" parent="PauseMenu/MarginPause/VBoxContainer2/VBoxContainer" groups=["ButtonUI"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5a146")
theme_override_font_sizes/font_size = 29
text = "Menu"

[node name="OptionsMenu" parent="." instance=ExtResource("4_rabgt")]
z_index = 100

[node name="HoverButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_luajn")

[connection signal="pressed" from="PauseMenu/MarginPause/VBoxContainer2/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginPause/VBoxContainer2/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginPause/VBoxContainer2/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
